Fix SonarQube identified issues