@@ -15,7 +15,6 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.food.ordering.system.order.service.domain.entity.Order.FAILURE_MESSAGE_DELIMITER;
 
@@ -67,8 +66,7 @@ public class OrderDataAccessMapper {
         .price(new Money(orderItemEntity.getPrice()))
         .quantity(orderItemEntity.getQuantity())
         .subTotal(new Money(orderItemEntity.getSubTotal()))
-        .build())
-      .collect(Collectors.toList());
+        .build()).toList();
   }
 
   private StreetAddress addressEntityToDeliveryAddress(OrderAddressEntity address) {
@@ -84,8 +82,7 @@ public class OrderDataAccessMapper {
         .price(orderItem.getPrice().getAmount())
         .quantity(orderItem.getQuantity())
         .subTotal(orderItem.getSubTotal().getAmount())
-        .build())
-      .collect(Collectors.toList());
+        .build()).toList();
   }
 
   private OrderAddressEntity deliveryAddressToAddressEntity(StreetAddress deliveryAddress) {
