@@ -13,7 +13,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
@@ -47,7 +46,7 @@ public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
         "could not be found for saga type " + sagaType))
       .stream()
       .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage)
-      .collect(Collectors.toList()));
+      .toList());
   }
 
   @Override
