@@ -11,7 +11,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
@@ -19,7 +18,7 @@ public class RestaurantDataAccessMapper {
   public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
     return restaurant.getProducts().stream()
       .map(product -> product.getId().getValue())
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
