@@ -9,7 +9,6 @@ import com.food.ordering.system.order.service.domain.outbox.model.payment.OrderP
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class OrderMessagingDataMapper {
@@ -75,7 +74,7 @@ public class OrderMessagingDataMapper {
         com.food.ordering.system.kafka.order.avro.model.Product.newBuilder()
           .setId(orderApprovalEventProduct.getId())
           .setQuantity(orderApprovalEventProduct.getQuantity())
-          .build()).collect(Collectors.toList()))
+          .build()).toList())
       .setPrice(orderApprovalEventPayload.getPrice())
       .setCreatedAt(orderApprovalEventPayload.getCreatedAt().toInstant())
       .build();
