@@ -13,7 +13,6 @@ import com.food.ordering.system.restaurant.service.domain.outbox.model.OrderEven
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataMapper {
@@ -28,7 +27,7 @@ public class RestaurantDataMapper {
               .productId(product.getId())
               .quantity(product.getQuantity())
               .build())
-          .collect(Collectors.toList()))
+          .toList())
         .totalAmount(new Money(restaurantApprovalRequest.getPrice()))
         .orderStatus(OrderStatus.valueOf(restaurantApprovalRequest.getRestaurantOrderStatus().name()))
         .build())
